--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // FirebaseUI Auth only
+
+    // Single target that includes all FirebaseUI libraries above
+    // this line must be included to integrate with Firebase
+
+
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.firebaseui:firebase-ui-database:0.4.4'
-
-    // FirebaseUI Auth only
     compile 'com.firebaseui:firebase-ui-auth:0.4.4'
-
-
-    // Single target that includes all FirebaseUI libraries above
     compile 'com.firebaseui:firebase-ui:0.4.4'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
-    compile 'com.google.firebase:firebase-core:9.2.0'                        // this line must be included to integrate with Firebase
-
-
+    compile 'com.google.firebase:firebase-core:9.2.0'
     testCompile 'junit:junit:4.12'
-}
 
+}
 
 apply plugin: 'com.google.gms.google-services'
